src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>IBB</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Customer Not Interested in Product</fullName>
        </values>
        <values>
            <fullName>Information Provided - No Sale</fullName>
        </values>
        <values>
            <fullName>Information provided - Callback Arranged</fullName>
        </values>
        <values>
            <fullName>Information provided -Branch Appt booked</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Remove from Marketing List</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Features_Explained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Features Explained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ack_Form_Needed__c</fullName>
        <defaultValue>&quot;X&quot;</defaultValue>
        <label>Ack Form Needed</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_4__c</fullName>
        <label>Address Line 4</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()- Date_of_Birth_of_Main_Applicant__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Looking_to_Deposit__c</fullName>
        <label>Amount Looking to Deposit</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_has_CCJ_s_or_been_bancrupt__c</fullName>
        <description>Has the applicant any CCJ&apos;s or been declared bankrupt</description>
        <inlineHelpText>Has the applicant any CCJ&apos;s or been declared bankrupt</inlineHelpText>
        <label>Applicant has CCJ&apos;s or been bankrupt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_all_applicants_UK_resident__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Are all applicants UK resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_applicants_resident_in_the_UK__c</fullName>
        <description>Are all applicants resident in the uk</description>
        <inlineHelpText>Are all applicants resident in the UK?</inlineHelpText>
        <label>Are all applicants resident in the UK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM_Lead_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM Lead Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BTL_Age__c</fullName>
        <formula>FLOOR((TODAY()- Date_of_Birth_of_Main_Applicant__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Applicants Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_DOB_Second_Applicant__c</fullName>
        <inlineHelpText>Please enter DOB of second applicant if applicable</inlineHelpText>
        <label>DOB Second Applicant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BTL_Eligible_Image__c</fullName>
        <formula>IF(  BTL_Eligible__c 
=&quot;No&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB7&quot;, &quot;Not Eligible&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB2&quot;, &quot;Eligible&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL - Eligible Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTL_Eligible__c</fullName>
        <formula>IF(AND(CONTAINS(TEXT( Interested_in__c ), &quot;HPP Buy-to-Let (BTL)&quot;),OR(  BTL_Age__c  &lt;25,  BTL_Age__c  &gt;65, What_is_the_purchase_price_valuation_of__c &lt;90000,  Number_of_Properties__c &gt;5, BTL_Finance_required__c &lt; 30000,  BTL_Finance_required__c  &gt;500000,   BTL_Finance_required__c &gt; ( What_is_the_purchase_price_valuation_of__c *0.75), Finance_Period__c &lt;7,   BTL_Main_Applicant_income__c &lt;25000,  Finance_Period__c &gt;30,  Are_all_applicants_UK_resident__c =FALSE,  TEXT( type_of_property__c )=&quot;Housing Association&quot;,  TEXT( type_of_property__c )=&quot;Council Property&quot;, TEXT( type_of_property__c )=&quot;Shared Ownership&quot;, TEXT(  BTL_Min_1_applicant_is_property_owner__c  )=&quot;No applicants have been property owners over 12 months&quot;,Confirm_that_none_of_the_applicants_have__c =TRUE, TEXT(Employment_Status__c)=&quot;Part time (ETYPL)&quot;, TEXT(Employment_Status__c)=&quot;Unemployed (ETYPU)&quot;, TEXT( Does_Customer_have_2_years_Accounts__c )=&quot;No&quot;, TEXT(Employment_Status__c)=&quot;Retired (ETYPR)&quot;, TEXT(Employment_Status__c)=&quot;Housewife (ETYPH)&quot;,(  BTL_Age__c + Finance_Period__c )&gt;80  )), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL - Eligible?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTL_Finance_required__c</fullName>
        <description>Finance required for BTL</description>
        <label>Finance Amount required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Finance_to_Value__c</fullName>
        <formula>BTL_Finance_required__c  / What_is_the_purchase_price_valuation_of__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance to Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BTL_Main_Applicant_income__c</fullName>
        <description>Please enter the main applicants income</description>
        <inlineHelpText>Please enter either main applicants gross annual income or if self employed then Net profit figure for the business</inlineHelpText>
        <label>Main Applicants income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Min_1_applicant_is_property_owner__c</fullName>
        <inlineHelpText>To be eligible for our HPP BTL product at least 1 applicant must be an existing property owner for over 12 months, please ask the customer to confirm?</inlineHelpText>
        <label>Min. 1 applicant is property owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Applicant is property owner over 12 months</fullName>
                </value>
                <value>
                    <fullName>2nd Applicant is a property owner over 12 months</fullName>
                </value>
                <value>
                    <fullName>Both applicants are property owners over 12 months</fullName>
                </value>
                <value>
                    <fullName>First time Buyer (Maximum 65% FTV Available)</fullName>
                </value>
                <value>
                    <fullName>No applicants have been property owners over 12 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTL_Number_of_Applicants__c</fullName>
        <inlineHelpText>Please enter whether this is sole or joint (maximum 2 applicants for BTL HPP applications</inlineHelpText>
        <label>Number of Applicants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Sole Applicant</fullName>
                </value>
                <value>
                    <fullName>2 Joint Applicants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTL_Rent_Only_eligible__c</fullName>
        <formula>IF(AND(CONTAINS(TEXT( Interested_in__c ), &quot;Buy To Let (Rent Only)&quot;),OR(  BTL_Age__c  &lt;25,  BTL_Age__c  &gt;65, What_is_the_purchase_price_valuation_of__c &lt;90000,  Number_of_Properties__c &gt;5, BTL_Finance_required__c &lt; 30000,  BTL_Finance_required__c  &gt;500000,   BTL_Finance_required__c &gt; (  What_is_the_purchase_price_valuation_of__c  *0.65), Finance_Period__c &lt;7,   BTL_Main_Applicant_income__c &lt;25000,  Finance_Period__c &gt;30,  Are_all_applicants_UK_resident__c =FALSE,  TEXT( type_of_property__c )=&quot;Housing Association&quot;,  TEXT( type_of_property__c )=&quot;Council Property&quot;, TEXT( type_of_property__c )=&quot;Shared Ownership&quot;, TEXT(  BTL_Min_1_applicant_is_property_owner__c  )=&quot;No applicants have been property owners over 12 months&quot;,Confirm_that_none_of_the_applicants_have__c =TRUE, TEXT(Employment_Status__c)=&quot;Part time (ETYPL)&quot;, TEXT(Employment_Status__c)=&quot;Unemployed (ETYPU)&quot;, TEXT( Does_Customer_have_2_years_Accounts__c )=&quot;No&quot;, TEXT(Employment_Status__c)=&quot;Retired (ETYPR)&quot;, TEXT(Employment_Status__c)=&quot;Housewife (ETYPH)&quot;,(  BTL_Age__c + Finance_Period__c )&gt;80  )), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL (Rent Only) eligible?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTL_Rent_Only_eligible_image__c</fullName>
        <formula>IF(  BTL_Rent_Only_eligible__c 
=&quot;No&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB7&quot;, &quot;Not Eligible&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB2&quot;, &quot;Eligible&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BTL (Rent Only) eligible image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BTL_Second_applicants_income__c</fullName>
        <inlineHelpText>Please enter second applicants groos annual income if employed or net profit if self employed</inlineHelpText>
        <label>Second applicants income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Type__c</fullName>
        <label>BTL Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Rent Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>TEXT(CreatedBy.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_which_recieved_lead__c</fullName>
        <label>Channel which recieved lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premier Banking</fullName>
                </value>
                <value>
                    <fullName>Branch Network</fullName>
                </value>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>HPP Team</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>BDMs</fullName>
                </value>
                <value>
                    <fullName>Website.</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_around_the_KYC_documents__c</fullName>
        <label>Comments around the KYC documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_that_none_of_the_applicants_have__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you (or any of the applicants) ever been made bankrupt or had a court judgement or court proceedings brought against you (or any of the applicants) for an outstanding debt or entered into an arrangement with creditors?</description>
        <label>Has Applicant ever had a CCJ or bankrupt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <defaultValue>&quot;Yes&quot;</defaultValue>
        <label>Converted Lead?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rental_Rate__c</fullName>
        <description>Hideen field for calculation purposes only</description>
        <label>Current Rental Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_moved_to_current_address__c</fullName>
        <label>Date moved to current address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <defaultValue>today() - 6000</defaultValue>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_of_Main_Applicant__c</fullName>
        <label>Date of Birth of Main Applicant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Customer_have_2_years_Accounts__c</fullName>
        <inlineHelpText>If the customer has stated they are self employed you MUST confirm that they have a minimum of 2 years audited accounts to proceed.</inlineHelpText>
        <label>Does Customer have 2 years Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Self employed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EligibleIMAGE__c</fullName>
        <formula>IF( 
Eligible__c=&quot;No&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB7&quot;, &quot;Not Eligible&quot;), 
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fxB2&quot;, &quot;Eligible&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <formula>IF(AND(CONTAINS(TEXT( Interested_in__c ), &quot;HPP&quot;),OR( Age__c &lt;21,  Age__c &gt;65,  What_is_the_purchase_price_valuation_of__c &lt;90000, Finance_Required__c&lt; 30000,  Finance_Required__c &gt;1500000, Income_verification__c  &lt;&gt; &quot;Eligible&quot;, Finance_Required__c&gt; ( What_is_the_purchase_price_valuation_of__c *0.8),  Finance_Period__c &lt;7, Finance_Period__c &gt;30,   Number_of_persons_applying__c  &gt;4,  Are_all_applicants_UK_resident__c  =FALSE,  TEXT( Will_the_property_be_the_main_residence__c )=&quot;No&quot;,  TEXT(  type_of_property__c )=&quot;Housing Association&quot;, TEXT( type_of_property__c )=&quot;Council Property&quot;, TEXT( type_of_property__c )=&quot;Shared Ownership&quot;,   Confirm_that_none_of_the_applicants_have__c =TRUE,  TEXT(Employment_Status__c)=&quot;Part time (ETYPL)&quot;,TEXT(Employment_Status__c)=&quot;Unemployed (ETYPU)&quot;, TEXT(  Does_Customer_have_2_years_Accounts__c  )=&quot;No&quot;, TEXT(Employment_Status__c)=&quot;Retired (ETYPR)&quot;,  TEXT(Employment_Status__c)=&quot;Housewife (ETYPH)&quot; )), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <inlineHelpText>Is the primary applicant in full time permanent employment or self employed with a minimum of 2 years of accounts ?</inlineHelpText>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed (ETYPE)</fullName>
                </value>
                <value>
                    <fullName>Housewife (ETYPH)</fullName>
                </value>
                <value>
                    <fullName>Part time (ETYPL)</fullName>
                </value>
                <value>
                    <fullName>Self employed non-professional (ETYPN)</fullName>
                </value>
                <value>
                    <fullName>Self employed professional (ETYPP)</fullName>
                </value>
                <value>
                    <fullName>Retired (ETYPR)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (ETYPU)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Finance_Available__c</fullName>
        <formula>( Expected_Monthly_Rent_Payment__c /125)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Finance Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_HPP_Completion_Date__c</fullName>
        <description>The date indicated by the customer or their solicitor for when they want to complete on their HPP</description>
        <inlineHelpText>Only to be entered by John Simpson following conversation with the customer of their solicitor for the estimated completion date for the HPP</inlineHelpText>
        <label>Estimated HPP Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Monthly_Rent_Payment__c</fullName>
        <inlineHelpText>Ask the Customer if they know what the anticipated monthly rental income will be for the property they are purchasing.</inlineHelpText>
        <label>Expected Monthly Rent Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTV__c</fullName>
        <formula>Finance_Required__c / What_is_the_purchase_price_valuation_of__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTV %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance_Period__c</fullName>
        <label>Finance Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Required__c</fullName>
        <label>Finance Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Number__c</fullName>
        <label>Flat Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_date_of_contact__c</fullName>
        <label>Future date of contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Happy_for_IBB_to_hold_your_data__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please confirm you are happy for IBB to hold the information on you.</inlineHelpText>
        <label>Happy for IBB to hold your data.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Name__c</fullName>
        <label>House Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <label>House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify__c</fullName>
        <label>If other, please specify</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_refinancing_How_Many_Properties__c</fullName>
        <inlineHelpText>Please ask the customer if they are refinancing how many properties they are looking to refinance with IBB on a Buy to let basis?</inlineHelpText>
        <label>If refinancing How Many Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_verification__c</fullName>
        <formula>IF(AND(  Please_enter_a_salary_amount_zero_or_a__c *4  &gt; Finance_Required__c ),&quot;Eligible&quot;, &quot;Not Eligible&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <label>Interested in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>Long term savings</fullName>
                </value>
                <value>
                    <fullName>Short term savings</fullName>
                </value>
                <value>
                    <fullName>Personal Finance</fullName>
                </value>
                <value>
                    <fullName>Takaful</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Finance</fullName>
                </value>
                <value>
                    <fullName>Sukuk</fullName>
                </value>
                <value>
                    <fullName>Retirement Planning</fullName>
                </value>
                <value>
                    <fullName>HPP BTL (Future)</fullName>
                </value>
                <value>
                    <fullName>Premier Banking</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Business Banking</fullName>
                </value>
                <value>
                    <fullName>West Bromwich BS lead (DO NOT APPROACH FOR MARKETING)</fullName>
                </value>
                <value>
                    <fullName>Discretionary Portfolio Service (DPS)</fullName>
                </value>
                <value>
                    <fullName>HPP Premier</fullName>
                </value>
                <value>
                    <fullName>HPP Buy-to-Let (BTL)</fullName>
                </value>
                <value>
                    <fullName>HPP Buy to Let (Rent Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intermediary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intermediary Contact</label>
        <referenceTo>Business_Contacts__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keep_up_to_date__c</fullName>
        <label>Keep up to date?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_lead_provider__c</fullName>
        <label>Location of lead provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Head Office Birmingham (1100)</fullName>
                </value>
                <value>
                    <fullName>HPP Sales/BDM</fullName>
                </value>
                <value>
                    <fullName>Small Heath (1101)</fullName>
                </value>
                <value>
                    <fullName>Leicester (1120)</fullName>
                </value>
                <value>
                    <fullName>Edgware Road (1201)</fullName>
                </value>
                <value>
                    <fullName>Southall (1202)</fullName>
                </value>
                <value>
                    <fullName>Whitechapel (1210)</fullName>
                </value>
                <value>
                    <fullName>East Ham (1215)</fullName>
                </value>
                <value>
                    <fullName>Manchester (1301)</fullName>
                </value>
                <value>
                    <fullName>Premier Banking</fullName>
                </value>
                <value>
                    <fullName>IBB Website Lead</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
                <value>
                    <fullName>Dewsbury (1401)</fullName>
                </value>
                <value>
                    <fullName>Tooting (1402)</fullName>
                </value>
                <value>
                    <fullName>Luton (1404)</fullName>
                </value>
                <value>
                    <fullName>Glasgow (1403)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Preference__c</fullName>
        <label>Marketing Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_consent__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please tick to confirm the customer is happy to recieve marketing via the following methods</inlineHelpText>
        <label>Marketing Consent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name(s)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Lead&quot;, 
                   Phone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Monthly_Payments__c</fullName>
        <formula>Finance_Period__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Monthly Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Properties__c</fullName>
        <inlineHelpText>Ask the customer the number of properties they currently have , the maximum combined for residential and buy-to let is 5 Porperties to apply for IBB&apos;s BTL product</inlineHelpText>
        <label>No. properties (Maximum 5)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_persons_applying__c</fullName>
        <label>Number of persons applying</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_enter_Occupation_of_Main_Applican__c</fullName>
        <label>Please enter Occupation of Main Applican</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_enter_a_salary_amount_zero_or_a__c</fullName>
        <inlineHelpText>If the customer is Self Employed then you MUST clarify and enter the NET Profit for the business for last 12 months accounts rather than the gross annual income/Gross profit</inlineHelpText>
        <label>Gross Annual Income/Net profit Self Empl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Number__c</fullName>
        <label>Preferred Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post (HCON1)</fullName>
                </value>
                <value>
                    <fullName>Telephone (HCON2)</fullName>
                </value>
                <value>
                    <fullName>Email (HCON3)</fullName>
                </value>
                <value>
                    <fullName>Fax (HCON4)</fullName>
                </value>
                <value>
                    <fullName>SMS (HCON5)</fullName>
                </value>
                <value>
                    <fullName>No Contact (HCON6)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Interested_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Interested In</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads (Product Interested In)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_of_Address_Explained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Address Explained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Identification_Explained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Identification Explained.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Postcode__c</fullName>
        <label>Property Postcode</label>
        <length>7</length>
        <type>Text</type>
    </fields>
</CustomObject>